Se corrigieron las rutas de los scripts

--- a/app/views/includes/footer.pug
+++ b/app/views/includes/footer.pug
@@ -2,4 +2,4 @@ script(src="libs/js/jquery.js")
 script(src="libs/js/popper.js")
 script(src="libs/js/bootstrap.js")
 script(src="libs/js/mdb.js")
-script(src="libs/js/app.js")
+script(src="js/app.js")
