--- a/app/views/index.pug
+++ b/app/views/index.pug
@@ -1,9 +1,6 @@
 <!DOCTYPE html>
 html(lang="en")
-  head
-    meta(charset="UTF-8")
-    meta(name="viewport" content="width=device-width, initial-scale=1.0")
-    title Document
-    link(rel="stylesheet" href="css/style.css")
+  include includes/header
   body
   h1 Pug es increíble 
+  include includes/footer
