--- a/app/views/index.pug
+++ b/app/views/index.pug
@@ -2,5 +2,5 @@
 html(lang="en")
   include includes/header
   body
-  h1 Pug es increíble 
-  include includes/footer
+    include includes/navbar
+    include includes/footer
